Instruction to create a volume